<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginRight="10dp">
                <LinearLayout
                    android:id="@+id/container_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/account_iv_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/profile"
                        tools:src="@drawable/ic_account"
                        android:layout_alignParentLeft="true" />
                    <TextView
                        android:id="@+id/account_tv_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:text="user_name" />

                </LinearLayout>
                <Button
                    android:id="@+id/account_btn_follow_signout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:text="@string/follow"
                    android:theme="@style/ButtonStyle"
                    android:layout_toRightOf="@id/container_profile" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/account_btn_follow_signout"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:baselineAligned="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_toRightOf="@id/container_profile">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="@string/post" />
                        <TextView
                            android:id="@+id/account_tv_post_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/count_0"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/follower_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="@string/follower" />

                        <TextView
                            android:id="@+id/account_tv_follower_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/count_0"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/following_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="@string/following" />
                        <TextView
                            android:id="@+id/account_tv_following_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/count_0"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
            <com.example.a82102.insta.Profile.ExpandableHeightGridView
                android:id="@+id/account_gridview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:numColumns="3"
                android:horizontalSpacing="3dp"
                android:verticalSpacing="3dp"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:scrollbars="none"
                android:isScrollContainer="false"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>