<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/userprofile_toolbar"
        layout="@layout/toolbar_userprofile" />

    <ScrollView
        android:id="@+id/scrollview_userprofile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/userinfo_relativelayout"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/container_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/userprofile_profile_iv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_alignParentLeft="true"
                        android:background="@android:color/holo_green_light"
                        android:contentDescription="@string/profile"
                        android:scaleType="centerCrop"
                         />



                </LinearLayout>

                <Button
                    android:id="@+id/userprofile_follow_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@id/container_profile"
                    android:layout_marginLeft="8dp"
                    android:text="@string/follow"
                    android:textColor="@color/colorBlack"
                    android:theme="@style/ButtonStyle" />

                <LinearLayout
                    android:id="@+id/pofofo_linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@id/userprofile_follow_btn"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toRightOf="@id/container_profile"
                    android:baselineAligned="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="@string/post" />

                        <TextView
                            android:id="@+id/userprofile_postcount_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/count_0"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/userprofile_follower_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="@string/follower" />

                        <TextView
                            android:id="@+id/userprofile_follower_count_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/count_0"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/userprofile_following_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="@string/following" />

                        <TextView
                            android:id="@+id/userprofile_following_count_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/count_0"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/userprofile_profilename_tv"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:textColor="@android:color/black"
                    android:text="user_name" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userinfo_relativelayout">
                <TextView
                    android:id="@+id/userprofile_introduction_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="introduction"
                    android:layout_marginLeft="10dp"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
            <com.example.a82102.insta.Profile.view.ExpandableHeightGridView
                android:id="@+id/userprofile_gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:horizontalSpacing="3dp"
                android:isScrollContainer="false"
                android:numColumns="3"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:scrollbars="none"
                android:verticalSpacing="3dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>